chore: improve SOAP endpoint test logic