@@ -58,7 +58,6 @@ import fi.dvv.xroad.catalog.persistence.entity.WebPage;
 import org.niis.xroad.catalog.persistence.entity.StatusInfo;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
@@ -66,39 +65,27 @@ import java.util.Set;
 
 public final class OrganizationMockDataFactory {
 
-    // Consistent test constants
     public static final LocalDateTime FIXED_TEST_TIME = LocalDateTime.of(2025, 1, 1, 12, 0, 0);
 
-    // Standard test business codes and GUIDs
-    public static final String DEFAULT_BUSINESS_CODE = "1234567-8";
     public static final String DEFAULT_ORGANIZATION_GUID = "12345678-1234-1234-1234-123456789012";
     public static final String DEFAULT_ORGANIZATION_TYPE = "Municipality";
     public static final String DEFAULT_PUBLISHING_STATUS = "Published";
     
     public static final String GOVT_ORG_BUSINESS_CODE = "0123456-7";
     public static final String GOVT_ORG_GUID = "11111111-1111-1111-1111-111111111111";
-    
-    public static final String PUBLIC_SERVICE_BUSINESS_CODE = "9876543-2";
-    public static final String PUBLIC_SERVICE_GUID = "22222222-2222-2222-2222-222222222222";
 
     public static final String NON_EXISTENT_BUSINESS_CODE = "9999999-9";
     public static final String NON_EXISTENT_GUID = "99999999-9999-9999-9999-999999999999";
 
-    // Company test constants
-    public static final String DEFAULT_BUSINESS_ID = "1234567-8";
     public static final String DEFAULT_COMPANY_FORM = "LLC";
     public static final String DEFAULT_COMPANY_NAME = "Test Company Ltd";
     public static final String DEFAULT_DETAILS_URI = "http://example.com/company/details";
 
     public static final String TEST_COMPANY_BUSINESS_ID = "2345678-9";
-    public static final String WEATHER_SERVICES_BUSINESS_ID = "3456789-0";
     public static final String NON_EXISTENT_BUSINESS_ID = "9999999-9";
 
     private OrganizationMockDataFactory() {
-        // Utility class - prevent instantiation
     }
-
-    // Factory methods for consistent object creation
 
     public static StatusInfo createStandardStatusInfo() {
         return new StatusInfo(FIXED_TEST_TIME, FIXED_TEST_TIME, FIXED_TEST_TIME, null);
@@ -126,78 +113,27 @@ public final class OrganizationMockDataFactory {
         return company;
     }
 
-    // Pre-defined standard test entities
-
-    public static final Organization GOVERNMENT_ORGANIZATION = createStandardOrganization(
-            GOVT_ORG_BUSINESS_CODE, GOVT_ORG_GUID, DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
-
-    public static final Organization PUBLIC_SERVICE_ORGANIZATION = createStandardOrganization(
-            PUBLIC_SERVICE_BUSINESS_CODE, PUBLIC_SERVICE_GUID, DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
-
-    public static final Company TEST_COMPANY = createStandardCompany(
-            TEST_COMPANY_BUSINESS_ID, "Test Company Ltd", DEFAULT_COMPANY_FORM);
-
-    public static final Company WEATHER_SERVICES_COMPANY = createStandardCompany(
-            WEATHER_SERVICES_BUSINESS_ID, "Weather Services Inc", DEFAULT_COMPANY_FORM);
-
-    // Pre-defined collections for common test scenarios
-
-    public static List<Organization> getStandardOrganizationList() {
-        return Arrays.asList(GOVERNMENT_ORGANIZATION, PUBLIC_SERVICE_ORGANIZATION);
-    }
-
-    public static List<Company> getStandardCompanyList() {
-        return Arrays.asList(TEST_COMPANY, WEATHER_SERVICES_COMPANY);
-    }
-
-    // Helper methods for creating organizations/companies with specific identifiers
-
     public static Organization createOrganizationWithBusinessCode(String businessCode) {
         return createStandardOrganization(businessCode, DEFAULT_ORGANIZATION_GUID,
                 DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
-    }
-
-    public static Optional<Organization> createOrganizationOptionalWithGuid(String guid) {
-        Organization organization = createStandardOrganization(DEFAULT_BUSINESS_CODE, guid,
-                DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
-        return Optional.of(organization);
     }
 
     public static Company createCompanyWithBusinessId(String businessId) {
         return createStandardCompany(businessId, DEFAULT_COMPANY_NAME, DEFAULT_COMPANY_FORM);
     }
 
-    // Helper methods for creating empty results (for not found scenarios)
-
     public static List<Organization> getEmptyOrganizationList() {
-        return Arrays.asList();
+        return List.of();
     }
 
     public static List<Company> getEmptyCompanyList() {
-        return Arrays.asList();
+        return List.of();
     }
 
     public static Optional<Organization> getEmptyOrganizationOptional() {
         return Optional.empty();
     }
 
-    // Helper method to create an organization with changed status info for testing hasOrganizationChanged
-    public static Organization createOrganizationWithChangedTime(String businessCode, String guid, LocalDateTime changedTime) {
-        Organization organization = createStandardOrganization(businessCode, guid, DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
-        StatusInfo statusInfo = new StatusInfo(FIXED_TEST_TIME, changedTime, FIXED_TEST_TIME, null);
-        organization.setStatusInfo(statusInfo);
-        return organization;
-    }
-
-    // Helper method to create a company with changed status info for testing hasCompanyChanged
-    public static Company createCompanyWithChangedTime(String businessId, String name, LocalDateTime changedTime) {
-        Company company = createStandardCompany(businessId, name, DEFAULT_COMPANY_FORM);
-        StatusInfo statusInfo = new StatusInfo(FIXED_TEST_TIME, changedTime, FIXED_TEST_TIME, null);
-        company.setStatusInfo(statusInfo);
-        return company;
-    }
-
-    // Factory method to create organization with all related entities populated
     public static Organization createFullOrganizationWithAllDetails(String businessCode, String guid) {
         Organization organization = createStandardOrganization(businessCode, guid, DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
         
@@ -262,17 +198,16 @@ public final class OrganizationMockDataFactory {
         address.setStatusInfo(createStandardStatusInfo());
         addresses.add(address);
 
-        organization.getAllOrganizationNames().addAll(names);
-        organization.getAllOrganizationDescriptions().addAll(descriptions);
-        organization.getAllEmails().addAll(emails);
-        organization.getAllPhoneNumbers().addAll(phoneNumbers);
-        organization.getAllWebPages().addAll(webPages);
-        organization.getAllAddresses().addAll(addresses);
+        organization.setOrganizationNames(names);
+        organization.setOrganizationDescriptions(descriptions);
+        organization.setEmails(emails);
+        organization.setPhoneNumbers(phoneNumbers);
+        organization.setWebPages(webPages);
+        organization.setAddresses(addresses);
 
         return organization;
     }
 
-    // Factory method to create company with all details populated
     public static Company createFullCompanyWithAllDetails(String businessId, String name) {
         Company company = createStandardCompany(businessId, name, DEFAULT_COMPANY_FORM);
         
@@ -282,12 +217,10 @@ public final class OrganizationMockDataFactory {
         return company;
     }
 
-    // Helper method to create StatusInfo with a specific changed time for testing change detection
     public static StatusInfo createStatusInfoWithChangedTime(LocalDateTime changedTime) {
         return new StatusInfo(FIXED_TEST_TIME, changedTime, FIXED_TEST_TIME, null);
     }
 
-    // Helper method to create StreetAddress with all nested entities having changed times
     public static StreetAddress createStreetAddressWithAllChangedEntities(LocalDateTime changedTime) {
         StreetAddress streetAddress = new StreetAddress();
         streetAddress.setStreetNumber("123");
@@ -297,7 +230,6 @@ public final class OrganizationMockDataFactory {
         streetAddress.setCoordinateState("Ok");
         streetAddress.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
 
-        // Create Street
         Street street = new Street();
         street.setLanguage("EN");
         street.setValue("Main Street 123");
@@ -307,7 +239,6 @@ public final class OrganizationMockDataFactory {
         streets.add(street);
         streetAddress.setStreets(streets);
 
-        // Create StreetAddressPostOffice
         StreetAddressPostOffice postOffice = new StreetAddressPostOffice();
         postOffice.setLanguage("EN");
         postOffice.setValue("Helsinki");
@@ -317,7 +248,6 @@ public final class OrganizationMockDataFactory {
         postOffices.add(postOffice);
         streetAddress.setPostOffices(postOffices);
 
-        // Create StreetAddressMunicipality and StreetAddressMunicipalityName
         StreetAddressMunicipality municipality = new StreetAddressMunicipality();
         municipality.setCode("091");
         municipality.setStreetAddress(streetAddress);
@@ -336,7 +266,6 @@ public final class OrganizationMockDataFactory {
         municipalities.add(municipality);
         streetAddress.setMunicipalities(municipalities);
 
-        // Create StreetAddressAdditionalInformation
         StreetAddressAdditionalInformation additionalInfo = new StreetAddressAdditionalInformation();
         additionalInfo.setLanguage("EN");
         additionalInfo.setValue("Building A, Floor 2");
@@ -349,13 +278,11 @@ public final class OrganizationMockDataFactory {
         return streetAddress;
     }
 
-    // Helper method to create PostOfficeBoxAddress with all nested entities having changed times
     public static PostOfficeBoxAddress createPostOfficeBoxAddressWithAllChangedEntities(LocalDateTime changedTime) {
         PostOfficeBoxAddress postOfficeBoxAddress = new PostOfficeBoxAddress();
         postOfficeBoxAddress.setPostalCode("00200");
         postOfficeBoxAddress.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
 
-        // Create PostOffice
         PostOffice postOffice = new PostOffice();
         postOffice.setLanguage("EN");
         postOffice.setValue("Helsinki Post Office");
@@ -365,7 +292,6 @@ public final class OrganizationMockDataFactory {
         postOffices.add(postOffice);
         postOfficeBoxAddress.setPostOffices(postOffices);
 
-        // Create PostOfficeBox
         PostOfficeBox postOfficeBox = new PostOfficeBox();
         postOfficeBox.setLanguage("EN");
         postOfficeBox.setValue("PO Box 123");
@@ -375,7 +301,6 @@ public final class OrganizationMockDataFactory {
         postOfficeBoxes.add(postOfficeBox);
         postOfficeBoxAddress.setPostOfficesBoxes(postOfficeBoxes);
 
-        // Create PostOfficeBoxAddressMunicipality and PostOfficeBoxAddressMunicipalityName
         PostOfficeBoxAddressMunicipality municipality = new PostOfficeBoxAddressMunicipality();
         municipality.setCode("091");
         municipality.setPostOfficeBoxAddress(postOfficeBoxAddress);
@@ -394,7 +319,6 @@ public final class OrganizationMockDataFactory {
         municipalities.add(municipality);
         postOfficeBoxAddress.setPostOfficeBoxAddressMunicipalities(municipalities);
 
-        // Create PostOfficeBoxAddressAdditionalInformation
         PostOfficeBoxAddressAdditionalInformation additionalInfo = new PostOfficeBoxAddressAdditionalInformation();
         additionalInfo.setLanguage("EN");
         additionalInfo.setValue("Department XYZ");
@@ -407,62 +331,10 @@ public final class OrganizationMockDataFactory {
         return postOfficeBoxAddress;
     }
 
-    // Simplified method to test just one StreetAddress entity
-    public static Organization createOrganizationWithOneStreetAddress(String businessCode, String guid, LocalDateTime changedTime) {
-        // Create base organization with basic entities (working ones)
-        Organization organization = createStandardOrganization(businessCode, guid, DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
-        organization.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
-        
-        // Add the basic working entities
-        Set<OrganizationName> names = new HashSet<>();
-        OrganizationName primaryName = new OrganizationName();
-        primaryName.setLanguage("EN");
-        primaryName.setType("Name");
-        primaryName.setValue("Test Organization");
-        primaryName.setOrganization(organization);
-        primaryName.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
-        names.add(primaryName);
-        organization.getAllOrganizationNames().addAll(names);
-        
-        // Add one Address with one StreetAddress
-        Set<Address> addresses = new HashSet<>();
-        Address address = new Address();
-        address.setCountry("Finland");
-        address.setType("Postal");
-        address.setSubType("Primary");
-        address.setOrganization(organization);
-        address.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
-        
-        // Create ONE StreetAddress with changed time
-        StreetAddress streetAddress = new StreetAddress();
-        streetAddress.setStreetNumber("123");
-        streetAddress.setPostalCode("00100");
-        streetAddress.setLatitude("60.1699");
-        streetAddress.setLongitude("24.9384");
-        streetAddress.setCoordinateState("Ok");
-        streetAddress.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
-        
-        // Set the bidirectional relationship using the working pattern
-        streetAddress.setAddress(address);
-        
-        // Create collection and ASSIGN it to the Address (following working JaxbOrganizationServiceTest pattern)
-        Set<StreetAddress> streetAddresses = new HashSet<>();
-        streetAddresses.add(streetAddress);
-        address.setStreetAddresses(streetAddresses);  // ASSIGN collection instead of manual sync
-        
-        addresses.add(address);
-        organization.setAddresses(addresses);  // ASSIGN collection instead of manual sync
-
-        return organization;
-    }
-
-    // Comprehensive method to create organization with ALL possible changed entities for complete test coverage
     public static Organization createOrganizationWithAllChangedEntities(String businessCode, String guid, LocalDateTime changedTime) {
-        // Create base organization with changed time
         Organization organization = createStandardOrganization(businessCode, guid, DEFAULT_ORGANIZATION_TYPE, DEFAULT_PUBLISHING_STATUS);
         organization.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         
-        // Create OrganizationNames with changed times
         Set<OrganizationName> names = new HashSet<>();
         OrganizationName primaryName = new OrganizationName();
         primaryName.setLanguage("EN");
@@ -472,7 +344,6 @@ public final class OrganizationMockDataFactory {
         primaryName.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         names.add(primaryName);
 
-        // Create OrganizationDescriptions with changed times
         Set<OrganizationDescription> descriptions = new HashSet<>();
         OrganizationDescription description = new OrganizationDescription();
         description.setLanguage("EN");
@@ -482,7 +353,6 @@ public final class OrganizationMockDataFactory {
         description.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         descriptions.add(description);
 
-        // Create Emails with changed times
         Set<Email> emails = new HashSet<>();
         Email email = new Email();
         email.setValue("changed@example.com");
@@ -491,7 +361,6 @@ public final class OrganizationMockDataFactory {
         email.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         emails.add(email);
 
-        // Create PhoneNumbers with changed times
         Set<PhoneNumber> phoneNumbers = new HashSet<>();
         PhoneNumber phoneNumber = new PhoneNumber();
         phoneNumber.setNumber("+987654321");
@@ -502,7 +371,6 @@ public final class OrganizationMockDataFactory {
         phoneNumber.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         phoneNumbers.add(phoneNumber);
 
-        // Create WebPages with changed times
         Set<WebPage> webPages = new HashSet<>();
         WebPage webPage = new WebPage();
         webPage.setUrl("https://www.changed-example.com");
@@ -512,7 +380,6 @@ public final class OrganizationMockDataFactory {
         webPage.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         webPages.add(webPage);
 
-        // Create Address with changed time and nested street/post office box addresses
         Set<Address> addresses = new HashSet<>();
         Address address = new Address();
         address.setCountry("Changed Country");
@@ -521,23 +388,20 @@ public final class OrganizationMockDataFactory {
         address.setOrganization(organization);
         address.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         
-        // Add StreetAddress with all nested entities using working pattern
         StreetAddress streetAddress = createStreetAddressWithAllChangedEntities(changedTime);
         streetAddress.setAddress(address);
         Set<StreetAddress> streetAddresses = new HashSet<>();
         streetAddresses.add(streetAddress);
-        address.setStreetAddresses(streetAddresses);  // ASSIGN collection instead of manual sync
+        address.setStreetAddresses(streetAddresses);
 
-        // Add PostOfficeBoxAddress with all nested entities using working pattern
         PostOfficeBoxAddress postOfficeBoxAddress = createPostOfficeBoxAddressWithAllChangedEntities(changedTime);
         postOfficeBoxAddress.setAddress(address);
         Set<PostOfficeBoxAddress> postOfficeBoxAddresses = new HashSet<>();
         postOfficeBoxAddresses.add(postOfficeBoxAddress);
-        address.setPostOfficeBoxAddresses(postOfficeBoxAddresses);  // ASSIGN collection instead of manual sync
+        address.setPostOfficeBoxAddresses(postOfficeBoxAddresses);
 
         addresses.add(address);
 
-        // Assign all entity collections to organization using working pattern
         organization.setOrganizationNames(names);
         organization.setOrganizationDescriptions(descriptions);
         organization.setEmails(emails);
@@ -548,35 +412,22 @@ public final class OrganizationMockDataFactory {
         return organization;
     }
 
-    // Comprehensive method to create company with ALL possible changed entities for complete test coverage
     public static Company createCompanyWithAllChangedEntities(String businessId, String name, LocalDateTime changedTime) {
         Company company = createStandardCompany(businessId, name, DEFAULT_COMPANY_FORM);
         company.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         
-        // Create BusinessAddress entities with changed times
         Set<BusinessAddress> businessAddresses = new HashSet<>();
         BusinessAddress businessAddress = createBusinessAddress(changedTime, company);
         businessAddresses.add(businessAddress);
         
-        // Create BusinessAuxiliaryName entities with changed times
         Set<BusinessAuxiliaryName> businessAuxiliaryNames = new HashSet<>();
-        BusinessAuxiliaryName businessAuxiliaryName = new BusinessAuxiliaryName();
-        businessAuxiliaryName.setSource(1L);
-        businessAuxiliaryName.setOrdering(1L);
-        businessAuxiliaryName.setVersion(1L);
-        businessAuxiliaryName.setName("Test Auxiliary Name");
-        businessAuxiliaryName.setLanguage("EN");
-        businessAuxiliaryName.setRegistrationDate(FIXED_TEST_TIME);
-        businessAuxiliaryName.setCompany(company);
-        businessAuxiliaryName.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
+        BusinessAuxiliaryName businessAuxiliaryName = createBusinessAuxiliaryName(changedTime, company);
         businessAuxiliaryNames.add(businessAuxiliaryName);
         
-        // Create BusinessIdChange entities with changed times
         Set<BusinessIdChange> businessIdChanges = new HashSet<>();
         BusinessIdChange businessIdChange = createBusinessIdChange(businessId, changedTime, company);
         businessIdChanges.add(businessIdChange);
         
-        // Create BusinessLine entities with changed times
         Set<BusinessLine> businessLines = new HashSet<>();
         BusinessLine businessLine = new BusinessLine();
         businessLine.setSource(1L);
@@ -589,7 +440,6 @@ public final class OrganizationMockDataFactory {
         businessLine.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         businessLines.add(businessLine);
         
-        // Create BusinessName entities with changed times
         Set<BusinessName> businessNames = new HashSet<>();
         BusinessName businessName = new BusinessName();
         businessName.setSource(1L);
@@ -602,7 +452,6 @@ public final class OrganizationMockDataFactory {
         businessName.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         businessNames.add(businessName);
         
-        // Create CompanyForm entities with changed times
         Set<CompanyForm> companyForms = new HashSet<>();
         CompanyForm companyForm = new CompanyForm();
         companyForm.setSource(1L);
@@ -615,7 +464,6 @@ public final class OrganizationMockDataFactory {
         companyForm.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         companyForms.add(companyForm);
         
-        // Create ContactDetail entities with changed times
         Set<ContactDetail> contactDetails = new HashSet<>();
         ContactDetail contactDetail = new ContactDetail();
         contactDetail.setSource(1L);
@@ -628,7 +476,6 @@ public final class OrganizationMockDataFactory {
         contactDetail.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         contactDetails.add(contactDetail);
         
-        // Create Language entities with changed times
         Set<Language> languages = new HashSet<>();
         Language language = new Language();
         language.setSource(1L);
@@ -640,7 +487,6 @@ public final class OrganizationMockDataFactory {
         language.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         languages.add(language);
         
-        // Create Liquidation entities with changed times
         Set<Liquidation> liquidations = new HashSet<>();
         Liquidation liquidation = new Liquidation();
         liquidation.setSource(1L);
@@ -653,7 +499,6 @@ public final class OrganizationMockDataFactory {
         liquidation.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         liquidations.add(liquidation);
         
-        // Create RegisteredEntry entities with changed times
         Set<RegisteredEntry> registeredEntries = new HashSet<>();
         RegisteredEntry registeredEntry = new RegisteredEntry();
         registeredEntry.setDescription("Test Registered Entry");
@@ -666,7 +511,6 @@ public final class OrganizationMockDataFactory {
         registeredEntry.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         registeredEntries.add(registeredEntry);
         
-        // Create RegisteredOffice entities with changed times
         Set<RegisteredOffice> registeredOffices = new HashSet<>();
         RegisteredOffice registeredOffice = new RegisteredOffice();
         registeredOffice.setSource(1L);
@@ -679,7 +523,6 @@ public final class OrganizationMockDataFactory {
         registeredOffice.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
         registeredOffices.add(registeredOffice);
         
-        // Set all entity collections to company using direct setters
         company.setBusinessAddresses(businessAddresses);
         company.setBusinessAuxiliaryNames(businessAuxiliaryNames);
         company.setBusinessIdChanges(businessIdChanges);
@@ -693,6 +536,19 @@ public final class OrganizationMockDataFactory {
         company.setRegisteredOffices(registeredOffices);
         
         return company;
+    }
+
+    private static BusinessAuxiliaryName createBusinessAuxiliaryName(LocalDateTime changedTime, Company company) {
+        BusinessAuxiliaryName businessAuxiliaryName = new BusinessAuxiliaryName();
+        businessAuxiliaryName.setSource(1L);
+        businessAuxiliaryName.setOrdering(1L);
+        businessAuxiliaryName.setVersion(1L);
+        businessAuxiliaryName.setName("Test Auxiliary Name");
+        businessAuxiliaryName.setLanguage("EN");
+        businessAuxiliaryName.setRegistrationDate(FIXED_TEST_TIME);
+        businessAuxiliaryName.setCompany(company);
+        businessAuxiliaryName.setStatusInfo(createStatusInfoWithChangedTime(changedTime));
+        return businessAuxiliaryName;
     }
 
     private static BusinessIdChange createBusinessIdChange(String businessId, LocalDateTime changedTime, Company company) {
